# PolyhedralConvexCones

./: CMakeLists.txt  Combination.cpp  Combination.h  LICENSE  PCCCalculator.cpp  PCCCalculator.h  README.md  sample.cpp
